<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout with vertical orientation and center gravity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".question">

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="411dp"
        android:layout_height="138dp"
        android:padding="10dp"
        android:text="@string/question_1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResponseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:gravity="center" />
    <!--ImageView used for showing pictures along with questions-->

    <ImageView
        android:id="@+id/myimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--TextView used for showing questions on screen-->

    <!--Using another LinearLayout for showing buttons
        in horizontal orientation-->

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/buttonA"
        android:textSize="20sp"
        android:onClick="btnAnsHandler"/>

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:onClick="btnAnsHandler"
        android:text="@string/buttonB"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/buttonC"
        android:textSize="20sp"
        android:onClick="btnAnsHandler"/>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:onClick="btnAnsHandler"
        android:text="@string/buttonD"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--TrueButton-->

        <!--FalseButton-->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--PreviousButton-->
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:backgroundTint="#DFD2D1"
            android:text="@string/prev_text"
            android:src="@drawable/back_arrow"
            android:onClick="btnAnsHandler"
            />

        <!--NextButton-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:backgroundTint="#DFD2D1"
            android:text="@string/next_text"
            android:src="@drawable/next_arrow"
            android:onClick="btnAnsHandler"
            />
s
    </LinearLayout>

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:backgroundTint="#DC143C"
        android:translationX="130dp"
        android:translationY="80dp"
        android:onClick="btnAnsHandler"/>

</LinearLayout>